add Lessons  rest response and migration